POWR-2985 added high z-index to button to ensure it's always on top

--- a/web/themes/custom/cloudy/src/components/link/link.scss
+++ b/web/themes/custom/cloudy/src/components/link/link.scss
@@ -90,4 +90,5 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
+  z-index: 10000 !important;
 }
